--- a/front/front.styles.css
+++ b/front/front.styles.css
@@ -93,6 +93,7 @@ body {
   transform: scale(1.1);
   -webkit-transition: 0.5s;
   transition: 0.5s;
+  background-image: url(./assets/gifestrellas.gif);
 }
 
 .casita:not(:hover) {
