--- a/front/front.styles.scss
+++ b/front/front.styles.scss
@@ -69,6 +69,7 @@ body{
         -ms-transform: scale(1.1);
         transform: scale(1.1);
         transition: 0.5s;
+        background-image: url(./assets/gifestrellas.gif);
     }
     .casita:not(:hover){
         transition: 0.5s;
