personaje x cada casa

--- a/front/front.styles.css
+++ b/front/front.styles.css
@@ -188,4 +188,8 @@ body {
 .casa_edad {
   font-size: large;
 }
+
+.divNuevo {
+  background-color: wheat;
+}
 /*# sourceMappingURL=front.styles.css.map */
