--- a/front/front.styles.css
+++ b/front/front.styles.css
@@ -110,6 +110,7 @@ body {
 
 .animales {
   font-size: x-large;
+  color: gold;
 }
 
 .titulocasa {
@@ -194,3 +195,28 @@ body {
   display: none;
 }
 /*# sourceMappingURL=front.styles.css.map */
+.varitaje{
+  background-color: lightblue;
+  width: 20vw;
+  height: 20vh;
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: space-around;
+  color: white;
+  border-radius: 30px;
+  border: gold;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),url("https://i.pinimg.com/originals/9d/4c/9e/9d4c9e0efc2f9995fd2d387d8751647b.jpg")
+}
+.varitas{
+  display: flex;
+  flex-wrap: wrap;
+  border-radius: 10px;
+  justify-content: center;
+  
+  
+  
+
+}
